Added DB migrations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/orders
+spring.datasource.username=database
+spring.datasource.password=111
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.format_sql=true
 spring.h2.console.enabled=true
 spring.datasource.sql-script-encoding=ISO-8859-1
